iconos y sobre mi act

--- a/index.html
+++ b/index.html
@@ -365,10 +365,10 @@
             </div>
             <div class="aparicionTextoPortfolio">
                 <h3 class="textoDegradado ">Alberto Basanta Debasa</h3>
-                <h5 class="destacado">Desarrollo web | CSS | HTML | JavaScript | WordPress | UI/UX | Diseño gráfico</h5>
-                <p>Profesional del <strong>diseño gráfico</strong>, iniciado en trabajos de impresión y editorial y evolucionado a <strong>diseño online y web</strong>. Acostumbrado al trabajo en equipo, me considero resolutivo, con una amplia experiencia en proyectos muy variados tras más de 16 años trabajando en agencia para clientes como Mayoral, Círculo de Lectores, Educa Borras, Jovi...</p>
-                <p>Después de crear bastantes webs en <strong>WordPress</strong> me estoy centrando más en el <strong>desarrollo web</strong> y ampliando más mis conocimientos en <strong>HTML, CSS, UI/UX, JavaScript y PHP</strong>.</p>
-                <p>Un ejemplo es esta web, la cual he desarrollado utilizando <strong>CSS</strong>  y <strong> JavaScript puro</strong>. Puedes ver la presentación de proyecto en <a href="https://drive.google.com/file/d/1F20Uk5kR9rLVoVZmWwduj-jaT1XOhEfh/view?usp=sharing" target="_blank"><span class="colorlink"><strong>este link</strong></span></a></p>
+                <h5 class="destacado">Desarrollo Frontend | Angular | JavaScript | TypeScript | HTML | CSS | UI/UX | Git | SEO | Maquetación | Diseño Gráfico</h5>
+                <p>Profesional del <strong>diseño gráfico</strong> con más de 16 años de experiencia en agencia de marketing y comunicación, evolucionando hacia el <strong>desarrollo web</strong>. Tras una sólida trayectoria en la creación de sitios con <strong>WordPress</strong>, he ampliado mis conocimientos en <strong>desarrollo frontend</strong>.</p>
+                <p>He realizado el <strong>Bootcamp Frontend en IT Academy</strong>, especializándome en <strong>Angular</strong>, donde he desarrollado proyectos aplicando tecnologías y herramientas muy demandadas en el sector como <strong>JavaScript, TypeScript, CSS moderno</strong> y <strong>Git</strong>.</p>
+                <p>Me apasiona diseñar y desarrollar interfaces <strong>interactivas, responsive y dinámicas</strong>, optimizadas para todo tipo de dispositivos, creando experiencias web funcionales y atractivas que combinan <strong>creatividad y desarrollo técnico</strong>.</p>
                 <div class="botones">
                     <a target="_blank" href="https://drive.google.com/file/d/19h_76yJXkYsbDNo9laZYt0wX1qgJQ57j/view?usp=sharing" class="boton img-aparicion"><p>CV completo</p><div class="iconoPdf iconosportfolio"></div></a>
                     <a target="_blank" href="https://www.linkedin.com/in/albertobasanta/" class="boton img-aparicion"><p>Linkedin</p><div class="iconoLinkedin iconosportfolio"></div></a>
@@ -404,6 +404,18 @@
         <div class="card aparicionCards">
             <div class="ampliacion3"><div class="iconoJs iconoshabilidades"></div></div>
             <p>JavaScript </p>
+        </div>
+        <div class="card aparicionCards">
+            <div class="ampliacion3"><div class="iconoTypeScript iconoshabilidades"></div></div>
+            <p>TypeScript </p>
+        </div>
+        <div class="card aparicionCards">
+            <div class="ampliacion3"><div class="iconoAngular iconoshabilidades"></div></div>
+            <p>Angular</p>
+        </div>
+        <div class="card aparicionCards">
+            <div class="ampliacion3"><div class="iconoGit iconoshabilidades"></div></div>
+            <p>Git</p>
         </div>
         <div class="card aparicionCards">
             <div class="ampliacion3"><div class="iconoTailwind iconoshabilidades"></div></div>
