--- a/index.html
+++ b/index.html
@@ -57,7 +57,15 @@
         <div class="puntos"><div class="punto1 actual"></div><div class="punto2"></div><div class="punto3"></div><div class="punto4"></div></div>
     </div>
     <div id="hero">
-        <div class="textHero"><h1 class="aparicionTexto"><span class="saludo aparicionTexto2"><span class="borrarMiniMovil">¡Hola! </span>soy Alberto Basanta,</span><br><span class="dise">DISEÑO</span><br class="soloMovil"><span class="web "> WEB </span><br><span class="maqueta aparicionIzquierdaExtra">MAQUETACIÓN</span></h1><div><h2 class="subtitulo aparicionInferior2">Con un buen código <br class="soloMovil">todo se ve mejor</h2></div></div>
+        <div class="textHero">
+        <h1 class="aparicionTexto"><span class="saludo aparicionTexto2"><span class="borrarMiniMovil">¡Hola! </span>soy Alberto Basanta,</span><br>
+            <span class="dise">DISEÑO</span><br class="soloMovil"><span class="web "> WEB </span>
+
+            <br>
+            <span class="maqueta aparicionIzquierdaExtra">FRONTEND</span>
+
+        </h1>
+        <div><h2 class="subtitulo aparicionInferior2">Creando experiencias <br class="soloMovil">visuales y funcionales</h2></div></div>
         <div class="flecha"><a href="#portfolio" aria-label="Ir a siguiente sección"><div class="flechaDown"></div></a></div>
         <div class="bolaMov1"></div>
         <div class="bolaMov2"></div>
@@ -406,16 +414,12 @@
             <p>JavaScript </p>
         </div>
         <div class="card aparicionCards">
-            <div class="ampliacion3"><div class="iconoTypeScript iconoshabilidades"></div></div>
-            <p>TypeScript </p>
-        </div>
-        <div class="card aparicionCards">
             <div class="ampliacion3"><div class="iconoAngular iconoshabilidades"></div></div>
             <p>Angular</p>
         </div>
         <div class="card aparicionCards">
-            <div class="ampliacion3"><div class="iconoGit iconoshabilidades"></div></div>
-            <p>Git</p>
+            <div class="ampliacion3"><div class="iconoTypeScript iconoshabilidades"></div></div>
+            <p>TypeScript </p>
         </div>
         <div class="card aparicionCards">
             <div class="ampliacion3"><div class="iconoTailwind iconoshabilidades"></div></div>
@@ -424,6 +428,14 @@
         <div class="card aparicionCards">
             <div class="ampliacion3"><div class="iconoBootstrap iconoshabilidades"></div></div>
             <p>Bootstrap</p>
+        </div>
+        <div class="card aparicionCards">
+            <div class="ampliacion3"><div class="iconoGit iconoshabilidades"></div></div>
+            <p>Git</p>
+        </div>
+        <div class="card aparicionCards">
+            <div class="ampliacion3"><div class="iconoGithub iconoshabilidades"></div></div>
+            <p>GitHub</p>
         </div>
         <div class="card aparicionCards">
             <div class="ampliacion3"><div class="iconoPhp iconoshabilidades"></div></div>
