--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <meta name="author" content="Alberto Basanta">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://basantades.netlify.app">
+    <meta property="og:url" content="https://basantades.vercel.app/">
     <meta property="og:title" content="Alberto Basanta Portfolio">
     <meta property="og:description" content="Portfolio web de Alberto Basanta, diseñador web, maquetación, front end developer y diseñador gráfico en Barcelona. Desarrollo web, CSS, HTML, JavaScript, WordPress, UI/UX.">
-    <meta property="og:image" content="https://basantades.netlify.app/images/portfolio-basantades.jpg">
+    <meta property="og:image" content="images/portfolio.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://basantades.netlify.app">
     <meta property="twitter:title" content="Alberto Basanta Portfolio">
     <meta property="twitter:description" content="Portfolio web de Alberto Basanta, diseñador web, maquetación, front end developer y diseñador gráfico en Barcelona. Desarrollo web, CSS, HTML, JavaScript, WordPress, UI/UX.">
-    <meta property="twitter:image" content="https://basantades.netlify.app/images/portfolio-basantades.jpg">
+    <meta property="twitter:image" content="images/portfolio.jpg">
     <title>Alberto Basanta Portfolio</title>
     <link rel="icon" type="image/png" href="images/favicon/favicon-16x16.png" sizes="16x16">
     <link rel="icon" type="image/png" href="images/favicon/favicon-32x32.png" sizes="32x32">
