--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Portfolio web de Alberto Basanta, diseñador web, maquetación, front end developer y diseñador gráfico en Barcelona. Desarrollo web, CSS, HTML, JavaScript, WordPress, UI/UX.">
+    <meta name="description" content="Portfolio web de Alberto Basanta, diseñador web, maquetación, frontend developer y diseñador gráfico en Barcelona. Desarrollo web, Angular, CSS, HTML, JavaScript, WordPress, UI/UX, SEO.">
     <meta name="author" content="Alberto Basanta">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://basantades.vercel.app/">
     <meta property="og:title" content="Alberto Basanta Portfolio">
-    <meta property="og:description" content="Portfolio web de Alberto Basanta, diseñador web, maquetación, front end developer y diseñador gráfico en Barcelona. Desarrollo web, CSS, HTML, JavaScript, WordPress, UI/UX.">
+    <meta property="og:description" content="Portfolio web de Alberto Basanta, diseñador web, maquetación, frontend developer y diseñador gráfico en Barcelona. Desarrollo web, Angular, CSS, HTML, JavaScript, WordPress, UI/UX, SEO.">
     <meta property="og:image" content="images/portfolio.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://basantades.netlify.app">
+    <meta property="twitter:url" content="https://basantades.vercel.app/">
     <meta property="twitter:title" content="Alberto Basanta Portfolio">
-    <meta property="twitter:description" content="Portfolio web de Alberto Basanta, diseñador web, maquetación, front end developer y diseñador gráfico en Barcelona. Desarrollo web, CSS, HTML, JavaScript, WordPress, UI/UX.">
+    <meta property="twitter:description" content="Portfolio web de Alberto Basanta, diseñador web, maquetación, frontend developer y diseñador gráfico en Barcelona. Desarrollo web, Angular, CSS, HTML, JavaScript, WordPress, UI/UX, SEO.">
     <meta property="twitter:image" content="images/portfolio.jpg">
     <title>Alberto Basanta Portfolio</title>
     <link rel="icon" type="image/png" href="images/favicon/favicon-16x16.png" sizes="16x16">
@@ -373,8 +373,8 @@
             </div>
             <div class="aparicionTextoPortfolio">
                 <h3 class="textoDegradado ">Alberto Basanta Debasa</h3>
-                <h5 class="destacado">Desarrollo Frontend | Angular | JavaScript | TypeScript | HTML | CSS | UI/UX | Git | SEO | Maquetación | Diseño Gráfico</h5>
-                <p>Profesional del <strong>diseño gráfico</strong> con más de 16 años de experiencia en agencia de marketing y comunicación, evolucionando hacia el <strong>desarrollo web</strong>. Tras una sólida trayectoria en la creación de sitios con <strong>WordPress</strong>, he ampliado mis conocimientos en <strong>desarrollo frontend</strong>.</p>
+                <h5 class="destacado">Desarrollo Frontend | Diseño Gráfico | UI/UX | SEO | Maquetación</h5>
+                <p>Profesional del <strong>diseño gráfico</strong> con una amplia experiencia en agencia de marketing y comunicación, evolucionando hacia el <strong>desarrollo web</strong>. Tras una sólida trayectoria en la creación de sitios con <strong>WordPress</strong>, he ampliado mis conocimientos en <strong>desarrollo frontend</strong>.</p>
                 <p>He realizado el <strong>Bootcamp Frontend en IT Academy</strong>, especializándome en <strong>Angular</strong>, donde he desarrollado proyectos aplicando tecnologías y herramientas muy demandadas en el sector como <strong>JavaScript, TypeScript, CSS moderno</strong> y <strong>Git</strong>.</p>
                 <p>Me apasiona diseñar y desarrollar interfaces <strong>interactivas, responsive y dinámicas</strong>, optimizadas para todo tipo de dispositivos, creando experiencias web funcionales y atractivas que combinan <strong>creatividad y desarrollo técnico</strong>.</p>
                 <div class="botones">
@@ -391,7 +391,7 @@
         <div class="listahabilidades">
         <div class="card aparicionCards">
             <div class="ampliacion3"><div class="iconoAdobe iconoshabilidades"></div></div>
-            <p>Suite Adobe</p>
+            <p>Adobe Creative Suite</p>
         </div>
         <div class="card aparicionCards">
             <div class="ampliacion3"><div class="iconoFigma iconoshabilidades"></div></div>
