update: improved portfolio bio with frontend and design experience

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Portfolio web de Alberto Basanta, diseñador web, maquetación, frontend developer y diseñador gráfico en Barcelona. Desarrollo web, Angular, CSS, HTML, JavaScript, WordPress, UI/UX, SEO.">
+    <meta name="description" content="Portfolio web de Alberto Basanta, frontend developer, diseñador web, maquetación y diseñador gráfico en Barcelona. Desarrollo web, Angular, CSS, HTML, JavaScript, WordPress, UI/UX, SEO.">
     <meta name="author" content="Alberto Basanta">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://basantades.vercel.app/">
     <meta property="og:title" content="Alberto Basanta Portfolio">
-    <meta property="og:description" content="Portfolio web de Alberto Basanta, diseñador web, maquetación, frontend developer y diseñador gráfico en Barcelona. Desarrollo web, Angular, CSS, HTML, JavaScript, WordPress, UI/UX, SEO.">
+    <meta property="og:description" content="Portfolio web de Alberto Basanta, frontend developer, diseñador web, maquetación y diseñador gráfico en Barcelona. Desarrollo web, Angular, CSS, HTML, JavaScript, WordPress, UI/UX, SEO.">
     <meta property="og:image" content="images/portfolio.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://basantades.vercel.app/">
     <meta property="twitter:title" content="Alberto Basanta Portfolio">
-    <meta property="twitter:description" content="Portfolio web de Alberto Basanta, diseñador web, maquetación, frontend developer y diseñador gráfico en Barcelona. Desarrollo web, Angular, CSS, HTML, JavaScript, WordPress, UI/UX, SEO.">
+    <meta property="twitter:description" content="Portfolio web de Alberto Basanta, frontend developer, diseñador web, maquetación y diseñador gráfico en Barcelona. Desarrollo web, Angular, CSS, HTML, JavaScript, WordPress, UI/UX, SEO.">
     <meta property="twitter:image" content="images/portfolio.jpg">
     <title>Alberto Basanta Portfolio</title>
     <link rel="icon" type="image/png" href="images/favicon/favicon-16x16.png" sizes="16x16">
@@ -373,10 +373,10 @@
             </div>
             <div class="aparicionTextoPortfolio">
                 <h3 class="textoDegradado ">Alberto Basanta Debasa</h3>
-                <h5 class="destacado">Desarrollo Frontend | Diseño Gráfico | UI/UX | SEO | Maquetación</h5>
-                <p>Profesional del <strong>diseño gráfico</strong> con una amplia experiencia en agencia de marketing y comunicación, evolucionando hacia el <strong>desarrollo web</strong>. Tras una sólida trayectoria en la creación de sitios con <strong>WordPress</strong>, he ampliado mis conocimientos en <strong>desarrollo frontend</strong>.</p>
-                <p>He realizado el <strong>Bootcamp Frontend en IT Academy</strong>, especializándome en <strong>Angular</strong>, donde he desarrollado proyectos aplicando tecnologías y herramientas muy demandadas en el sector como <strong>JavaScript, TypeScript, CSS moderno</strong> y <strong>Git</strong>.</p>
-                <p>Me apasiona diseñar y desarrollar interfaces <strong>interactivas, responsive y dinámicas</strong>, optimizadas para todo tipo de dispositivos, creando experiencias web funcionales y atractivas que combinan <strong>creatividad y desarrollo técnico</strong>.</p>
+                <h5 class="destacado">Desarrollo Frontend | Diseño Gráfico | WordPress | UI/UX | SEO | Maquetación</h5>
+                <p><strong>Desarrollador frontend</strong> con experiencia práctica en el desarrollo de aplicaciones web utilizando <strong>Angular</strong>, <strong>JavaScript</strong>, <strong>TypeScript</strong>, <strong>HTML</strong> y <strong>CSS moderno</strong>. Apasionado por crear interfaces <strong>interactivas</strong>, <strong>responsive</strong> y optimizadas para una excelente <strong>experiencia de usuario</strong>, con especial atención a la <strong>accesibilidad</strong> y el rendimiento.</p>
+                <p>He participado en proyectos reales trabajando bajo <strong>metodologías ágiles</strong> como <strong>Scrum</strong> y <strong>Kanban</strong>, colaborando con equipos multidisciplinares y gestionando tareas con <strong>Taiga</strong>. Domino el uso de <strong>Git</strong> y <strong>GitHub</strong> para control de versiones, incluyendo ramas, rebases, resolución de conflictos y creación de <strong>Pull Requests</strong> claros y efectivos. Además, tengo experiencia con <strong>Figma</strong> para traducir diseños UI a código fiel y funcional.</p>
+                <p>Provengo del mundo del <strong>diseño gráfico</strong>, con una sólida trayectoria en agencias de marketing y comunicación. He desarrollado campañas creativas tanto para medios digitales como impresos, incluyendo <strong>contenidos para redes sociales</strong>, <strong>material editorial</strong> y <strong>email marketing</strong>. También he trabajado con <strong>WordPress</strong> para la creación y mantenimiento de sitios web orientados a objetivos de <strong>SEO</strong> y <strong>usabilidad</strong>.</p>
                 <div class="botones">
                     <a target="_blank" href="https://drive.google.com/file/d/19h_76yJXkYsbDNo9laZYt0wX1qgJQ57j/view?usp=sharing" class="boton img-aparicion"><p>CV completo</p><div class="iconoPdf iconosportfolio"></div></a>
                     <a target="_blank" href="https://www.linkedin.com/in/albertobasanta/" class="boton img-aparicion"><p>Linkedin</p><div class="iconoLinkedin iconosportfolio"></div></a>
