update: hero text animation

--- a/index.html
+++ b/index.html
@@ -59,11 +59,9 @@
     <div id="hero">
         <div class="textHero">
         <h1 class="aparicionTexto"><span class="saludo aparicionTexto2"><span class="borrarMiniMovil">¡Hola! </span>soy Alberto Basanta,</span><br>
-            <span class="dise">DISEÑO</span><br class="soloMovil"><span class="web "> WEB </span>
-
+            <span class="maqueta">FRONTEND</span>
             <br>
-            <span class="maqueta aparicionIzquierdaExtra">FRONTEND</span>
-
+            <div class="aparicionIzquierdaExtra"><span class="dise">DISEÑO</span><br class="soloMovil"><span class="web"> WEB </span> </div>
         </h1>
         <div><h2 class="subtitulo aparicionInferior2">Creando experiencias <br class="soloMovil">visuales y funcionales</h2></div></div>
         <div class="flecha"><a href="#portfolio" aria-label="Ir a siguiente sección"><div class="flechaDown"></div></a></div>
